# V-A-U-L-T

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.cursor/: mcp.json
.github/workflows/: ci.yml  deploy-pages.yml
docs/: ARCHITECTURE.md  TOOLSTACK.md
src/vault/: __init__.py  cli.py  config.py  embeddings.py  ingest.py  models.py  pipeline.py  temporal_client.py
src/vault/delivery/: __init__.py  quarantine_ui.py
src/vault/extraction/: __init__.py
src/vault/graph/: __init__.py
src/vault/ingestion/: __init__.py
src/vault/validation/: __init__.py
src/vault/workflows/: __init__.py
tests/: conftest.py  test_e2e.py  test_embeddings.py  test_graph.py  test_models.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: api.ts  app.css  main.tsx  types.ts
web/src/components/: Layout.tsx
web/src/landing/: LandingPage.tsx  landing.css
web/src/pages/: Dashboard.tsx  Gaps.tsx  Ingest.tsx  Quarantine.tsx  Query.tsx  Settings.tsx
