[project]
name = "vault"
version = "0.1.0"
description = "V.A.U.L.T — Versatile Archive of Unified Learning & Thought"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Core
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "instructor>=1.7",
    "httpx>=0.28",

    # Ingestion
    "trafilatura>=2.0",
    "yt-dlp>=2025.1",
    "youtube-transcript-api>=1.0",

    # Validation
    "sentence-transformers>=3.4",

    # Graph
    "neo4j>=5.27",

    # Delivery
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "mcp>=1.4",

    # Orchestration
    "temporalio>=1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]
papers = [
    "markitdown>=0.1",
]
transcribe = [
    "openai-whisper>=20240930",
]
validation = [
    "groundguard>=0.1",
    "longtracer>=0.3",
]
full = [
    "vault[papers,transcribe,validation]",
]

[project.scripts]
vault = "vault.cli:main"
vault-mcp = "vault.delivery:main"
vault-worker = "vault.workflows:main"
vault-api = "vault.delivery:rest_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vault"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring network or external services",
]
